Implement research pack output and remaining value. Clean up descriptions.

--- a/locale/en/rac.cfg
+++ b/locale/en/rac.cfg
@@ -6,8 +6,11 @@ rac-outputs=Outputs
 rac-research-mode=Modify research queue
 rac-research-mode-description=Change the research queue based on the input signal.
 rac-queue-tech-replace=Replace entire queue
+rac-queue-tech-replace-description=Clears the research queue, then adds the input technologies to it.
 rac-queue-tech-front=Add to front of queue
+rac-queue-tech-front-description=Adds missing technologies to the front of the queue.
 rac-queue-tech-back=Add to back of queue
+rac-queue-tech-back-description=Add missing technologies to back of the queue.
 rac-research-get-prereq=Get technology pre-requisites
 rac-research-get-prereq-description=Get the technologies that must be researched before technologies in input signals.  Output values and qualities will match each input signal.
 rac-research-get-successors=Get technology successors
@@ -16,22 +19,32 @@ rac-research-get-recipes=Get recipes unlocked by technology
 rac-research-get-recipes-description=Get the recipes that are unlocked by technologies in input signals.  Output values and qualities will match each input signal.
 rac-research-get-items=Get items unlocked by technology
 rac-research-get-items-description=Get the items that are unlocked by technologies in input signals.  Output values and qualities will match each input signal.
+rac-research-get-science-packs=Get science packs for technology
+rac-research-get-science-packs-description=Get the science packs (or items) used to research the technologies in input signals (does not include triggered technologies).  Output values and qualities will match each input signal, unless there is only one input signal - in which case the count will be the number of research items required per increment.
 
 rac-research-current=Read current research
 rac-research-current-description=Outputs the technology that is currently being researched.
 rac-research-current-percent=Read research progress (%)
 rac-research-current-percent-description=Outputs the current research progress as a percentage value (0-100).
 rac-research-current-percent-label=Percent
+rac-research-current-percent-label-description=The current research progress percentage of the technology being researched.
 rac-research-current-value=Read research progress (value)
-rac-research-current-value-description=Outputs the current research progress as a numeric value (R) out of the total research value (T).
-rac-research-current-value-label=Research value
+rac-research-current-value-description=Outputs the current (C) and remaining (R) research progress as numeric values out of the total research (T).
+rac-research-current-current-label=Current progress
+rac-research-current-current-label-description=The current research progress of the technology being researched.
+rac-research-current-remaining-label=Remaining progress
+rac-research-current-remaining-label-description=The remaining amount of research required to complete the technology being researched.
 rac-research-current-total-label=Total research
+rac-research-current-total-label-description=The total research amount required for the technology being researched.
 
 rac-research-status=Read research status
 rac-research-status-description=Outputs the current research state of technologies.
 rac-research-status-researched=Researched technologies
+rac-research-status-researched-description=Technologies that have already been researched.
 rac-research-status-available=Available technologies
+rac-research-status-available-description=Technologies that can be researched (all prerequisites met).
 rac-research-status-unresearched=Unresearched technologies
+rac-research-status-unresearched-description=Technologies that have not yet been researched.
 
 [item-group-name]
 rac-technology=Technology
