Improved handling of infinite techs and copy+paste.

--- a/locale/en/rac.cfg
+++ b/locale/en/rac.cfg
@@ -1,8 +1,9 @@
 rac-numbered-tech=__1__ __2__
 rac-infinite-tech=__1__ __2__+
 
-rac-inputs=Inputs
-rac-outputs=Outputs
+rac-input-label=Input Signal Handling
+rac-input-output-label=Input/Output Signal Handling
+rac-output-label=Output Signal Handling
 rac-research-mode=Modify research queue
 rac-research-mode-description=Change the research queue based on the input signal.
 rac-queue-tech-replace=Replace entire queue
@@ -11,16 +12,22 @@ rac-queue-tech-front=Add to front of queue
 rac-queue-tech-front-description=Adds missing technologies to the front of the queue.
 rac-queue-tech-back=Add to back of queue
 rac-queue-tech-back-description=Add missing technologies to back of the queue.
+rac-io-mode-label=Output mode
+rac-io-mode-input-value=Output values derived from input
+rac-io-mode-input-value-description=The value of output signals will be based on the input signal values.\n\nFor example, the input is the [font=default-bold]Logistics[/font] technology signal with a signal value of 4, and [font=default-bold]Get technology pre-requisites[/font] is selected, then the output will be the [font=default-bold]Automation Science Pack[/font] technology signal, also with a value of 4.  This mode is useful for multiplexing multiple input signals.
+rac-io-mode-input-context=Output values based on context
+rac-io-mode-input-context-description=The value of the output signals will be either 1 or a context dependent value.\n\nFor output technologies this will be the level of the technology - which is useful for infinite techs.
+rac-output-signals=Output Signals
 rac-research-get-prereq=Get technology pre-requisites
-rac-research-get-prereq-description=Get the technologies that must be researched before technologies in input signals.  Output values and qualities will match each input signal.
+rac-research-get-prereq-description=Get the technologies that must be researched before technologies in input signals.  When [font=default-bold]Output values derived from input[/font] is selected, output values will match each input signal.  When context-based output is selected, the level of each prerequisite technology will be output.
 rac-research-get-successors=Get technology successors
-rac-research-get-successors-description=Get the technologies that can be researched after technologies in input signals.  Output values and qualities will match each input signal.
+rac-research-get-successors-description=Get the technologies that can be researched after technologies in input signals.  When [font=default-bold]Output values derived from input[/font] is selected, output values will match each input signal.  When context-based output is selected, the level of each successor technology will be output.
 rac-research-get-recipes=Get recipes unlocked by technology
-rac-research-get-recipes-description=Get the recipes that are unlocked by technologies in input signals.  Output values and qualities will match each input signal.
+rac-research-get-recipes-description=Get the recipes that are unlocked by technologies in input signals.  When [font=default-bold]Output values derived from input[/font] is selected, output values will match each input signal.  When context-based output is selected, each recipe will output a value of 1.
 rac-research-get-items=Get items unlocked by technology
-rac-research-get-items-description=Get the items that are unlocked by technologies in input signals.  Output values and qualities will match each input signal.
+rac-research-get-items-description=Get the items that are unlocked by technologies in input signals.  When [font=default-bold]Output values derived from input[/font] is selected, output values will match each input signal.  When context-based output is selected, each item will output a value of 1.
 rac-research-get-science-packs=Get science packs for technology
-rac-research-get-science-packs-description=Get the science packs (or items) used to research the technologies in input signals (does not include triggered technologies).  Output values and qualities will match each input signal, unless there is only one input signal - in which case the count will be the number of research items required per increment.
+rac-research-get-science-packs-description=Get the science packs (or items) used to research the technologies in input signals.  When [font=default-bold]Output values derived from input[/font] is selected, output values will match each input signal.  When context-based output is selected, the output will be the required count per research increment.
 
 rac-research-current=Read current research
 rac-research-current-description=Outputs the technology that is currently being researched.
