Prepare for 1.0.0 release.

--- a/locale/en/rac.cfg
+++ b/locale/en/rac.cfg
@@ -60,4 +60,4 @@ rac-technology=Technology
 research-automation-combinator=Research Automation Combinator
 
 [entity-description]
-research-automation-combinator=TODO: RAC description
+research-automation-combinator=An advanced combinator that can modify the research queue and output research-related signals based on input signals.
